--- a/index.html
+++ b/index.html
@@ -700,7 +700,89 @@
                             </div>
                         </div>
                         <div id="financas-verdes-forcas" class="inner-tab-content hidden"><p class="text-gray-500 italic">Conteúdo...</p></div>
-                        <div id="financas-verdes-oportunidades" class="inner-tab-content hidden"><p class="text-gray-500 italic">Conteúdo...</p></div>
+                        <div id="financas-verdes-oportunidades" class="inner-tab-content hidden animate-fade">
+    <h3 class="text-xl font-bold text-gray-800 mb-6 flex items-center">
+        <svg class="w-6 h-6 text-[#F59E0B] mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6"></path></svg>
+        Fronteiras de Evolução
+    </h3>
+    
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+        
+        <div class="bg-white p-5 rounded-xl border border-gray-100 shadow-sm hover:shadow-md transition-shadow flex items-start space-x-4">
+            <div class="flex-shrink-0 p-3 bg-orange-50 rounded-lg text-[#F59E0B]">
+                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"></path></svg>
+            </div>
+            <div>
+                <h4 class="font-bold text-gray-800 text-lg">Crédito para Agricultura Sustentável</h4>
+                <p class="text-sm text-gray-600 leading-relaxed mt-1">
+                    Estruturar monitoramento sistemático dos resultados ambientais dos produtores beneficiados, com indicadores como área convertida para manejo sustentável, redução estimada de emissões e ganhos de eficiência hídrica.
+                </p>
+            </div>
+        </div>
+
+        <div class="bg-white p-5 rounded-xl border border-gray-100 shadow-sm hover:shadow-md transition-shadow flex items-start space-x-4">
+            <div class="flex-shrink-0 p-3 bg-orange-50 rounded-lg text-[#F59E0B]">
+                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z"></path></svg>
+            </div>
+            <div>
+                <h4 class="font-bold text-gray-800 text-lg">Capacitação Técnica para Produtores</h4>
+                <p class="text-sm text-gray-600 leading-relaxed mt-1">
+                    Implementar programas contínuos de capacitação técnica ligados às linhas verdes, apoiando a transição sustentável no campo com conteúdos práticos, assistência técnica e acompanhamento pós-crédito.
+                </p>
+            </div>
+        </div>
+
+        <div class="bg-white p-5 rounded-xl border border-gray-100 shadow-sm hover:shadow-md transition-shadow flex items-start space-x-4">
+            <div class="flex-shrink-0 p-3 bg-orange-50 rounded-lg text-[#F59E0B]">
+                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253"></path></svg>
+            </div>
+            <div>
+                <h4 class="font-bold text-gray-800 text-lg">Financiamento para Biodiversidade</h4>
+                <p class="text-sm text-gray-600 leading-relaxed mt-1">
+                    Formalizar critérios, metas e mecanismos de acompanhamento específicos para restauração da biodiversidade, com relatórios ambientais e registro dos benefícios ecológicos gerados pelos projetos financiados.
+                </p>
+            </div>
+        </div>
+
+        <div class="bg-white p-5 rounded-xl border border-gray-100 shadow-sm hover:shadow-md transition-shadow flex items-start space-x-4">
+            <div class="flex-shrink-0 p-3 bg-orange-50 rounded-lg text-[#F59E0B]">
+                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"></path></svg>
+            </div>
+            <div>
+                <h4 class="font-bold text-gray-800 text-lg"> Crédito para Energia Limpa</h4>
+                <p class="text-sm text-gray-600 leading-relaxed mt-1">
+                    Consolidar indicadores de concessão de crédito verde por categoria energética, evidenciando impacto, redução estimada de emissões e volume financiado, com relatórios periódicos integrados às metas sistêmicas.
+                </p>
+            </div>
+        </div>
+
+        <div class="bg-white p-5 rounded-xl border border-gray-100 shadow-sm hover:shadow-md transition-shadow flex items-start space-x-4">
+            <div class="flex-shrink-0 p-3 bg-orange-50 rounded-lg text-[#F59E0B]">
+                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"></path></svg>
+            </div>
+            <div>
+                <h4 class="font-bold text-gray-800 text-lg">Transição Industrial Net Zero</h4>
+                <p class="text-sm text-gray-600 leading-relaxed mt-1">
+                    Desenvolver métricas de impacto climático para acompanhar projetos voltados à redução e compensação de emissões, com relatórios anuais, metas de crédito verde e integração a metodologias como o GHG Protocol.
+                </p>
+            </div>
+        </div>
+
+        <div class="bg-white p-5 rounded-xl border border-gray-100 shadow-sm hover:shadow-md transition-shadow flex items-start space-x-4">
+            <div class="flex-shrink-0 p-3 bg-orange-50 rounded-lg text-[#F59E0B]">
+                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"></path></svg>
+            </div>
+            <div>
+                <h4 class="font-bold text-gray-800 text-lg">Consumo Sustentável para Pessoas e Pequenos Negócios</h4>
+                <p class="text-sm text-gray-600 leading-relaxed mt-1">
+                    Ampliar a segmentação das linhas de crédito para pessoa física e microempreendedores, criando produtos específicos para transição sustentável, com incentivos financeiros, capacitação e acompanhamento pós-crédito.
+                </p>
+            </div>
+        </div>
+
+    </div>
+</div>
+                </div>
                     </div>
                 </div>
             </div>
@@ -1021,6 +1103,7 @@
     </script>
 </body>
 </html>
+
 
 
 
