Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"></path></svg>
             </div>
             <div>
-                <h4 class="font-bold text-gray-800 text-lg">Inteligência Analítica</h4>
+                <h4 class="font-bold text-gray-800 text-lg">Inteligência Analítica para Estratégia</h4>
                 <p class="text-sm text-gray-600 leading-relaxed mt-1">
-                    Expandir modelos preditivos e integrar mapas de experiência para antecipar tendências, criando produtos baseados nas reais necessidades do cooperado.
+                    Expandir modelos preditivos e integrar mapas de experiência, dados territoriais e insights longitudinais para antecipar necessidades e tendências na criação de produtos e serviços.
                 </p>
             </div>
         </div>
@@ -163,7 +163,7 @@
             <div>
                 <h4 class="font-bold text-gray-800 text-lg">Engajamento Conectado</h4>
                 <p class="text-sm text-gray-600 leading-relaxed mt-1">
-                    Unificar métricas de comunicação e comportamento (assembleias, digital e núcleos) para personalizar a interação e fortalecer o vínculo.
+                    Unificar métricas de comunicação e comportamento, conectando participação em assembleias, núcleos e jornadas digitais, com uso de ferramentas avançadas para personalização.
                 </p>
             </div>
         </div>
@@ -173,9 +173,9 @@
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253"></path></svg>
             </div>
             <div>
-                <h4 class="font-bold text-gray-800 text-lg">Letramento Digital</h4>
+                <h4 class="font-bold text-gray-800 text-lg">Letramento Digital do Cooperado</h4>
                 <p class="text-sm text-gray-600 leading-relaxed mt-1">
-                    Criar trilhas de educação personalizadas com níveis de proficiência para garantir que o cooperado utilize plenamente os serviços digitais.
+                    Desenvolver trilhas personalizadas de educação digital com níveis de proficiência, indicadores de evolução e integração com dados de adoção dos canais.
                 </p>
             </div>
         </div>
@@ -185,27 +185,40 @@
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"></path></svg>
             </div>
             <div>
-                <h4 class="font-bold text-gray-800 text-lg">Comunicação Inclusiva</h4>
+                <h4 class="font-bold text-gray-800 text-lg"> Comunicação Inclusiva</h4>
                 <p class="text-sm text-gray-600 leading-relaxed mt-1">
-                    Formalizar protocolos de acessibilidade e conteúdo multissensorial para assegurar equidade total no acesso à informação.
+                    Formalizar diretrizes estruturadas de acessibilidade, incluindo protocolos para conteúdos inclusivos, comunicação multissensorial e indicadores de equidade no acesso à informação.
                 </p>
             </div>
         </div>
 
-        <div class="bg-white p-5 rounded-xl border border-gray-100 shadow-sm hover:shadow-md transition-shadow flex items-start space-x-4 md:col-span-2">
+        <div class="bg-white p-5 rounded-xl border border-gray-100 shadow-sm hover:shadow-md transition-shadow flex items-start space-x-4">
             <div class="flex-shrink-0 p-3 bg-orange-50 rounded-lg text-[#F59E0B]">
-                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z"></path></svg>
+                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"></path></svg>
             </div>
             <div>
                 <h4 class="font-bold text-gray-800 text-lg">Protagonismo Jovem</h4>
                 <p class="text-sm text-gray-600 leading-relaxed mt-1">
-                    Implementar painéis de acompanhamento geracional e integrar novas gerações em trilhas de liderança para garantir a perenidade da cooperativa.
+                    Implementar painéis de acompanhamento geracional e integrar novas gerações em trilhas de liderança, núcleos cooperativistas e experiências ampliadas de formação.
+                </p>
+            </div>
+        </div>
+
+        <div class="bg-white p-5 rounded-xl border border-gray-100 shadow-sm hover:shadow-md transition-shadow flex items-start space-x-4">
+            <div class="flex-shrink-0 p-3 bg-orange-50 rounded-lg text-[#F59E0B]">
+                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"></path></svg>
+            </div>
+            <div>
+                <h4 class="font-bold text-gray-800 text-lg">Personalização da Jornada do Cooperado</h4>
+                <p class="text-sm text-gray-600 leading-relaxed mt-1">
+                    Aprimorar a análise de dados para oferecer experiências personalizadas, conectando produtos, serviços e canais digitais às preferências e comportamentos individuais.
                 </p>
             </div>
         </div>
 
     </div>
 </div>
+                </div>
                 </div>
             </div>
             </div>    
@@ -1103,6 +1116,7 @@
     </script>
 </body>
 </html>
+
 
 
 
