--- a/index.html
+++ b/index.html
@@ -1334,29 +1334,173 @@
         // ==========================================
         const projectsData = [
             // --- Participativa ---
-            {
+             {
                 id: "part-01",
-                nome: "Plataforma de Voto Digital",
+                nome: "NPS (Relacional, Transacional, Competitiva e do Canal)",
                 desafio: "Participativa",
                 maturidade: "Consolidado",
-                descricao: "Sistema seguro para votação em assembleias digitais, aumentando a participação dos associados.",
-                detalhes: "Esta plataforma utiliza blockchain para garantir a auditabilidade dos votos. Permitiu um aumento de 300% na participação de associados que moram longe das agências."
+                descricao: "Avaliação da satisfação dos associados em diferentes interações.",
+                detalhes: "O Net Promoter Score é aplicado em múltiplas frentes (relacional, transacional, competitiva e por canal) para medir a experiência do associado, identificar pontos de melhoria e direcionar estratégias de relacionamento mais assertivas."
             },
             {
                 id: "part-02",
-                nome: "Fundo Social da Comunidade",
+                nome: "Coordenação da Jornada do Associado",
                 desafio: "Participativa",
                 maturidade: "Em Expansão",
-                descricao: "Fundo gerido pelos próprios associados para investir em melhorias locais.",
-                detalhes: "Os associados decidem o destino de 2% das sobras líquidas para projetos sociais locais através de votação direta no aplicativo."
+                descricao: "Gestão integrada da experiência do associado.",
+                detalhes: " A prática garante que todas as etapas da jornada do associado sejam coordenadas, oferecendo uma experiência fluida e consistente, desde o primeiro contato até serviços mais complexos, fortalecendo vínculos e fidelização."
             },
             {
                 id: "part-03",
-                nome: "Hub de Ideias Cooperativas",
+                nome: "Plataforma de Relacionamento",
                 desafio: "Participativa",
                 maturidade: "MVP / Piloto",
-                descricao: "Canal direto para envio de sugestões de novos produtos pelos cooperados.",
-                detalhes: "Um portal onde associados podem sugerir, votar e comentar em ideias de novos produtos. As 5 melhores ideias anuais são aceleradas."
+                descricao: "Canal digital para interação contínua.",
+                detalhes: "Ferramenta que centraliza informações, serviços e comunicação com associados, permitindo maior proximidade, agilidade no atendimento e personalização da experiência."
+            },
+
+             {
+                id: "part-04",
+                nome: "Matriz de Comunicação",
+                desafio: "Participativa",
+                maturidade: "MVP / Piloto",
+                descricao: "Estrutura para organizar canais e mensagens.",
+                detalhes: "Define os fluxos, responsáveis e periodicidade das comunicações, garantindo alinhamento estratégico e clareza na transmissão de informações para diferentes públicos."
+            },
+
+             {
+                id: "part-05",
+                nome: "Rituais de Comunicação (Governança, Estratégia e Cultura)",
+                desafio: "Participativa",
+                maturidade: "MVP / Piloto",
+                descricao: "Encontros regulares para alinhamento.",
+                detalhes: "São práticas formais que reforçam governança, disseminam cultura organizacional e asseguram que colaboradores e associados estejam alinhados às estratégias e valores da cooperativa."
+            },
+
+             {
+                id: "part-06",
+                nome: "Check-in dos Conteúdos de Negócios",
+                desafio: "Participativa",
+                maturidade: "MVP / Piloto",
+                descricao: "Revisão periódica de informações.",
+                detalhes: "Processo para validar e atualizar conteúdos críticos de negócios, garantindo que informações disponibilizadas aos associados sejam sempre corretas e relevantes."
+            },
+
+             {
+                id: "part-07",
+                nome: "Relatório de Assembleias",
+                desafio: "Participativa",
+                maturidade: "MVP / Piloto",
+                descricao: "Documento com decisões e resultados.",
+                detalhes: "Consolidado das assembleias que assegura transparência e engajamento, permitindo que associados acompanhem as deliberações e impactos das decisões tomadas."
+            },
+
+             {
+                id: "part-08",
+                nome: "Podcast “Momento Sicredi Conexão”",
+                desafio: "Participativa",
+                maturidade: "MVP / Piloto",
+                descricao: "Conteúdo em áudio para engajamento.",
+                detalhes: "Canal informativo que aproxima associados e colaboradores, trazendo temas relevantes sobre cooperativismo, negócios e cultura organizacional de forma acessível."
+            },
+
+             {
+                id: "part-09",
+                nome: "Notícias e Conteúdos Informativos (Site Institucional e Relatório Anual)",
+                desafio: "Participativa",
+                maturidade: "MVP / Piloto",
+                descricao: "Divulgação de informações estratégicas.",
+                detalhes: "Publicações periódicas que reforçam transparência e mantêm associados informados sobre resultados, projetos e ações da cooperativa."
+            },
+
+             {
+                id: "part-10",
+                nome: "Momentos Presenciais com Associados",
+                desafio: "Participativa",
+                maturidade: "MVP / Piloto",
+                descricao: "Encontros para fortalecer vínculos.",
+                detalhes: "Eventos presenciais que promovem interação, escuta ativa e construção de relacionamento próximo, alinhado aos princípios cooperativistas."
+            },
+
+             {
+                id: "part-11",
+                nome: "Site Sistêmico e da Cooperativa com Elementos de Acessibilidade",
+                desafio: "Participativa",
+                maturidade: "MVP / Piloto",
+                descricao: "Inclusão digital para todos.",
+                detalhes: "Implementação de recursos que garantem acessibilidade, como navegação adaptada, contraste adequado e compatibilidade com leitores de tela."
+            },
+
+             {
+                id: "part-12",
+                nome: "Conteúdos com Legendas e Libras",
+                desafio: "Participativa",
+                maturidade: "MVP / Piloto",
+                descricao: "Materiais adaptados para inclusão.",
+                detalhes: "Produção de vídeos e conteúdos com legendas e interpretação em Libras, assegurando acesso à informação para pessoas com deficiência auditiva."
+            },
+
+             {
+                id: "part-13",
+                nome: "Crédito à Acessibilidade com Taxas Diferenciadas",
+                desafio: "Participativa",
+                maturidade: "MVP / Piloto",
+                descricao: "Linha de crédito inclusiva.",
+                detalhes: "Produto financeiro com condições especiais para apoiar investimentos em acessibilidade, promovendo inclusão social e autonomia."
+            },
+
+             {
+                id: "part-14",
+                nome: "Cartilha de Atendimento Inclusivo",
+                desafio: "Participativa",
+                maturidade: "MVP / Piloto",
+                descricao: "Guia para atendimento acessível.",
+                detalhes: "Material educativo que orienta colaboradores sobre práticas inclusivas, garantindo um atendimento respeitoso e adaptado às necessidades dos associados."
+            },
+
+             {
+                id: "part-15",
+                nome: "Agências e Instalações Adequadas às Normas de Acessibilidade",
+                desafio: "Participativa",
+                maturidade: "MVP / Piloto",
+                descricao: "Infraestrutura inclusiva.",
+                detalhes: " Adequação física das unidades conforme legislação, com rampas, sinalização tátil e outros recursos que asseguram acessibilidade universal."
+            },
+
+             {
+                id: "part-16",
+                nome: "Cartão em Braile para Associados",
+                desafio: "Participativa",
+                maturidade: "MVP / Piloto",
+                descricao: "Produto adaptado para deficientes visuais.",
+                detalhes: "Cartão com informações em Braile, garantindo autonomia e inclusão para associados com deficiência visual."
+            },
+
+             {
+                id: "part-17",
+                nome: "Cursos sobre Acessibilidade para Colaboradores",
+                desafio: "Participativa",
+                maturidade: "MVP / Piloto",
+                descricao: "Capacitação para inclusão.",
+                detalhes: "Treinamentos que desenvolvem competências para atendimento inclusivo e conscientização sobre diversidade e acessibilidade."
+            },
+
+             {
+                id: "part-18",
+                nome: "Cooperativas Escolares",
+                desafio: "Participativa",
+                maturidade: "MVP / Piloto",
+                descricao: "Educação cooperativista para jovens.",
+                detalhes: "Programa que incentiva a criação de cooperativas em escolas, promovendo aprendizado prático sobre gestão, cidadania e princípios cooperativos."
+            },
+
+             {
+                id: "part-19",
+                nome: "Programa Líder Jovem",
+                desafio: "Participativa",
+                maturidade: "MVP / Piloto",
+                descricao: "Formação de lideranças jovens.",
+                detalhes: "Iniciativa para desenvolver habilidades de liderança, engajamento social e visão cooperativista entre jovens, preparando-os para papéis estratégicos no futuro."
             },
 
             // --- Colaborativa ---
@@ -1594,6 +1738,7 @@
     </script>
 </body>
 </html>
+
 
 
 
