--- a/index.html
+++ b/index.html
@@ -1506,19 +1506,110 @@
             // --- Colaborativa ---
             {
                 id: "colab-01",
-                nome: "Programa de Intercooperação",
+                nome: "Capacitação Empresa Rural",
                 desafio: "Colaborativa",
                 maturidade: "Consolidado",
-                descricao: "Compartilhamento de estruturas administrativas entre singulares.",
-                detalhes: "Redução de custos operacionais em 15% através do compartilhamento de serviços de backoffice e TI entre três cooperativas regionais."
+                descricao: "Formação voltada à gestão de empresas rurais.",
+                detalhes: "Programa desenvolvido em parceria com a Cooperativa Regional Auriverde para capacitar produtores rurais em práticas de gestão empresarial, fortalecendo a sustentabilidade e competitividade no agronegócio."
             },
+
             {
                 id: "colab-02",
-                nome: "Conexão Startup-Coop",
+                nome: "Formação Agro em Foco",
                 desafio: "Colaborativa",
-                maturidade: "MVP / Piloto",
-                descricao: "Aceleração de startups que resolvem dores do agronegócio.",
-                detalhes: "Programa de inovação aberta que seleciona 10 startups por ano para rodar pilotos dentro das propriedades dos associados."
+                maturidade: "Consolidado",
+                descricao: "Curso sobre tendências e gestão no agronegócio.",
+                detalhes: "Iniciativa conjunta com a Cooperativa Regional Itaipu que oferece conteúdos sobre inovação, mercado e gestão estratégica no setor agro, promovendo atualização e desenvolvimento dos associados."
+            },
+
+            {
+                id: "colab-03",
+                nome: "Formação Gestão de Resultados",
+                desafio: "Colaborativa",
+                maturidade: "Consolidado",
+                descricao: "Capacitação para melhoria de performance.",
+                detalhes: "Treinamento realizado com a Cotrifred para desenvolver competências em gestão orientada a resultados, com foco em eficiência, planejamento e tomada de decisão."
+            },
+
+            {
+                id: "colab-04",
+                nome: "Ações do Dia C",
+                desafio: "Colaborativa",
+                maturidade: "Consolidado",
+                descricao: "Mobilização social cooperativista.",
+                detalhes: "Atividades realizadas no Dia de Cooperar, envolvendo colaboradores e associados em ações sociais e voluntárias que reforçam os princípios cooperativistas e o impacto positivo na comunidade."
+            },
+
+            {
+                id: "colab-05",
+                nome: "Open Finance via Plataforma de Relacionamento",
+                desafio: "Colaborativa",
+                maturidade: "Consolidado",
+                descricao: "Integração financeira para associados.",
+                detalhes: "Implementação do Open Finance na plataforma de relacionamento, permitindo maior transparência, controle e personalização dos serviços financeiros para os associados."
+            },
+
+            {
+                id: "colab-06",
+                nome: "Política de Governança Cooperativa",
+                desafio: "Colaborativa",
+                maturidade: "Consolidado",
+                descricao: "Diretrizes para governança cooperativa.",
+                detalhes: "Documento que estabelece práticas e princípios de governança para as Centrais, garantindo transparência, equidade e responsabilidade na gestão cooperativa."
+            },
+
+            {
+                id: "colab-07",
+                nome: "Guia de Boas Práticas de Governança Corporativa",
+                desafio: "Colaborativa",
+                maturidade: "Consolidado",
+                descricao: "Manual para gestão eficiente e ética.",
+                detalhes: "Material que orienta sobre práticas recomendadas de governança corporativa, fortalecendo a conformidade e a credibilidade das cooperativas perante seus associados e mercado."
+            },
+
+            {
+                id: "colab-08",
+                nome: "Calendário Anual de Eventos e Reuniões",
+                desafio: "Colaborativa",
+                maturidade: "Consolidado",
+                descricao: "Planejamento de encontros estratégicos.",
+                detalhes: "Agenda organizada com eventos externos e reuniões internas, garantindo previsibilidade e alinhamento entre as cooperativas e seus públicos."
+            },
+
+            {
+                id: "colab-09",
+                nome: "Portal de Informações no SharePoint",
+                desafio: "Colaborativa",
+                maturidade: "Consolidado",
+                descricao: "Repositório digital de conteúdos estratégicos.",
+                detalhes: "Plataforma que centraliza documentos, políticas e informações relevantes para as cooperativas, promovendo acesso rápido e seguro aos materiais."
+            },
+
+            {
+                id: "colab-10",
+                nome: "Small Farm Hub",
+                desafio: "Colaborativa",
+                maturidade: "Consolidado",
+                descricao: "Hub de soluções para pequenas propriedades.",
+                detalhes: "Espaço dedicado a oferecer serviços, tecnologias e suporte para pequenos produtores, incentivando inovação e sustentabilidade no campo."
+            },
+
+            {
+                id: "colab-11",
+                nome: "FDR com Categoria de Empreendedorismo e Inovação",
+                desafio: "Colaborativa",
+                maturidade: "Consolidado",
+                descricao: "Fundo para projetos inovadores.",
+                detalhes: "Inclusão da categoria de Empreendedorismo e Inovação no Fundo de Desenvolvimento Regional, fomentando iniciativas que impulsionem novos negócios e soluções criativas."
+            },
+            
+            {
+                id: "colab-12",
+                nome: "Linha de Crédito Sicredi Inova",
+                desafio: "Colaborativa",
+                maturidade: "Consolidado",
+                descricao: "Crédito para inovação e tecnologia.",
+                detalhes: "Produto financeiro voltado para apoiar projetos inovadores, aquisição de tecnologia e modernização de processos, fortalecendo a competitividade dos associados."
             },
 
             // --- Capacidades ---
@@ -1738,6 +1829,7 @@
     </script>
 </body>
 </html>
+
 
 
 
